Fix mkdepend so that it compiles on OS/2. Thanks to Javier Pedemonte <pedemont@us.ibm.com> for the patch. Bug #135795 r=cls a=rjesup